fix 90% partial overlay padding from being cut off at bottom

--- a/css/sass/partials/_overlay.scss
+++ b/css/sass/partials/_overlay.scss
@@ -48,7 +48,9 @@
   &.active {
     display: block;
   }
+  // For when the overlay has extra room at the top to show the content beneath
   &.overlay-padding {
+    min-height: 90%;
     .overlay-close {
       top: 14%;
       top: calc(10% + 20px);
